--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "^14.2.15",
+    "re-chart": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.13.0",
     "school-management-dashboard": "file:"
   },
   "devDependencies": {
