--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@types/react-big-calendar": "^1.8.12",
     "moment": "^2.30.1",
     "next": "^14.2.15",
@@ -17,8 +18,10 @@
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "recharts": "^2.13.0",
-    "school-management-dashboard": "file:"
+    "school-management-dashboard": "file:",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
