--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
@@ -32,7 +32,9 @@
     "eslint-config-next": "14.2.5",
     "lucide-react": "^0.452.0",
     "postcss": "^8.4.47",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
